# dirigo-e2v-line-camera

./: README.md  pyproject.toml
dirigo_e2v_line_camera/: __init__.py  _dirigo_e2v_line_camera.py  aviiva.py  base.py  dirigo_e2v_line_camera.py  uniiqa.py
dirigo_e2v_line_scan_camera/: __init__.py  dirigo_e2v_line_scan_camera.py
tests/: test_hw.py
