[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dirigo_e2v_line_camera"
version = "0.2.0"
description = "Plugin to use Teledyne e2v (and previous Atmel) line-scan cameras with Dirigo."
authors = [
    {name = "T. D. Weber", email = "tweber@mit.edu"}
]
license = {text = "MIT"}
dependencies = []


[project.entry-points."dirigo.devices.line_camera"]
uniiqa_plus_color = "dirigo_e2v_line_camera:UniiqaPlusColor"
aviiva_m2 = "dirigo_e2v_line_camera:AviivaM2"