[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dirigo_e2v_line_camera"
version = "0.1.2"
description = "Plugin to use E2V and Atmel line-scan cameras with Dirigo."
authors = [
    {name = "T. D. Weber", email = "tweber@mit.edu"}
]
license = {text = "MIT"}
dependencies = []

# deprecated
[project.entry-points."dirigo_line_cameras"]
uniiqa_plus_color = "dirigo_e2v_line_camera:E2VUNiiQAPlusColor"
aviiva_m2 = "dirigo_e2v_line_camera:E2VAViiVAM2"

[project.entry-points."dirigo.devices.line_camera"]
uniiqa_plus_color = "dirigo_e2v_line_camera:E2VUNiiQAPlusColor"
aviiva_m2 = "dirigo_e2v_line_camera:E2VAViiVAM2"